--- a/css/elements/_nav-primary.scss
+++ b/css/elements/_nav-primary.scss
@@ -1,39 +1,54 @@
 // Global Navigation
+
 ul#nav-icon__wrapper {
 	float: right;
 	position: relative;
 	z-index: 120;
 	padding-top: 2px;
+
 	li {
-    margin-right: 0;
+		margin-right: 0;
+
 		button {
 			background: none;
 			border: none !important;
 			color: $clr_bg-accent;
 			font-size: $font_size-std !important;
-			padding: $baseline;
+			padding: $baseline ($baseline / 2);
 			line-height: $font_size-med;
-      margin-top: 4px;
+			margin-top: 4px;
+
 			&:hover {
 				background: none;
 				color: lighten($clr_bg-accent, 100%);
 			}
+            .scroll {
+                &[data-state="shown"] {
+                    display: block;
+                }
+                &[data-state="hidden"] {
+                    display: none;
+                }
+            }
 		}
 	}
 }
-
 // Sidebar navigation lists
+
 aside.sidebar {
 	ul.list--blocks {
 		padding: 0;
+
 		li {
 			display: block;
 			padding: 0;
 			margin: 0;
 			box-shadow: inset 0 -2px $clr_bg-main;
+
 			&:last-child {
 				box-shadow: inset 0 0 $clr_bg-main;
 			}
+
 			a {
 				display: block;
 				width: 100%;
@@ -43,6 +58,7 @@ aside.sidebar {
 				padding: $baseline;
 				//@include linear-gradient($clr_black, $clr_black);
 				transition: background-image $ease-main $speed-fast, box-shadow $ease-main $speed-fast;
+
 				&:hover {
 					//@include linear-gradient($clr_black, lighten($clr_black, 10%));
 					box-shadow: inset 0 -4px $clr_bg-main;
