new svgs for comments, updated font for performance

--- a/css/elements/_colophon.scss
+++ b/css/elements/_colophon.scss
@@ -4,6 +4,10 @@ footer#colophon {
 	display: block;
 	width: 100%;
 	padding: $baseline;
+  #copyright small {
+    font-size: $font_size-xsm;
+    color: $clr_grey-mid;
+  }
 }
 
 button#return_to_top {
