--- a/css/base/_variables.scss
+++ b/css/base/_variables.scss
@@ -21,7 +21,7 @@ $clr_bg-main: $clr_white;
 $clr_shadow: $clr_black;
 
 // Fonts
-@import url( 'https://fonts.googleapis.com/css?family=Comfortaa|Overpass:300');
+@import url( 'https://fonts.googleapis.com/css?family=Comfortaa:300|Overpass:300' );
 $font_face-main: "Overpass", Arial, "Helvetica Neue", Helvetica, sans-serif;
 $font_face-accent: "Comfortaa", "Times New Roman", Times, Baskerville, Georgia, serif;
 
