--- a/css/elements/_page-content.scss
+++ b/css/elements/_page-content.scss
@@ -118,12 +118,12 @@ article.page--single {
 
 // 404 page
 #bsod {
-	position: absolute;
+	position: fixed;
 	top: 0;
 	right: 0;
 	bottom: 0;
 	left: 0;
-	z-index: 9000;
+	z-index: 10100;
 	background: #0000ee;
 	width: 100%;
 	height: 100vh;
