--- a/css/elements/_sidebar.scss
+++ b/css/elements/_sidebar.scss
@@ -12,6 +12,7 @@ aside.sidebar {
 	overflow-y: auto;
 	-webkit-overflow-scrolling: touch;
 	color: $clr_bg-main;
+	font-family: $font_face-main;
 		&[data-state="open"] {
 		transform: translate3d(0, 0, 0);
 		-webkit-transform: translate3d(0, 0, 0);
