--- a/css/elements/post/_image-hero.scss
+++ b/css/elements/post/_image-hero.scss
@@ -35,6 +35,7 @@ header.post__header {
 		text-align: left;
 		font-family: $font_face-accent;
 		color: $clr_bg-main;
+		font-size: 3rem;
 		text-shadow: 0 0 $baseline rgba($clr_shadow, $opacity-solid);
 		text-decoration: none;
 	}
