--- a/style.scss
+++ b/style.scss
@@ -4,7 +4,7 @@
 */
 
 // Base
-@import 'css/base/normalise';
+//@import 'css/base/normalise';
 @import 'css/base/social_media_colors';
 @import 'css/base/variables';
 @import 'css/base/mixins';
