--- a/css/elements/_colophon.scss
+++ b/css/elements/_colophon.scss
@@ -1,14 +1,13 @@
 // Colophon
-
 footer#colophon {
 	display: block;
 	width: 100%;
 	padding: $baseline;
-  #copyright small {
+	#copyright small {
 		font-family: $font_face-main;
-    font-size: $font_size-xsm;
-    color: $clr_grey-mid;
-  }
+		font-size: $font_size-xsm;
+		color: $clr_grey-mid;
+	}
 }
 
 button#return_to_top {
@@ -17,12 +16,14 @@ button#return_to_top {
 		right: 0;
 		bottom: 2vh;
 		z-index: 10000;
-		transform: translate3d(100%, 0, 0);
-		-webkit-transform: translate3d(100%, 0, 0);
 		transition: $ease-main $speed-fast;
 		margin: 0 !important;
 	}
-	&.slideout {
+	&[data-state="not-shown"] {
+		transform: translate3d(100%, 0, 0);
+		-webkit-transform: translate3d(100%, 0, 0);
+	}
+	&[data-state="is-shown"] {
 		transform: translate3d(0, 0, 0);
 		-webkit-transform: translate3d(0, 0, 0);
 	}
