--- a/css/elements/post/_post-meta.scss
+++ b/css/elements/post/_post-meta.scss
@@ -20,43 +20,21 @@
 			&.author {
 				&:before {
 					content: "";
-					fill: tomato;
-					background-image: url("img/ui/user.svg");
+					background-image: url("data:image/svg+xml;utf8,<svg fill='%23374043' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M9 11.75c-.69 0-1.25.56-1.25 1.25s.56 1.25 1.25 1.25 1.25-.56 1.25-1.25-.56-1.25-1.25-1.25zm6 0c-.69 0-1.25.56-1.25 1.25s.56 1.25 1.25 1.25 1.25-.56 1.25-1.25-.56-1.25-1.25-1.25zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8 0-.29.02-.58.05-.86 2.36-1.05 4.23-2.98 5.21-5.37C11.07 8.33 14.05 10 17.42 10c.78 0 1.53-.09 2.25-.26.21.71.33 1.47.33 2.26 0 4.41-3.59 8-8 8z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
 				}
 			}
 
 			&.date {
 				&:before {
 					content: "";
-					background-image: url("img/ui/calendar.svg");
+					background-image: url("data:image/svg+xml;utf8,<svg fill='%23374043' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
 				}
 			}
 
 			&.read_time {
 				&:before {
 					content: "";
-					background-image: url("img/ui/time.svg");
-				}
-			}
-
-			&.comments {
-				&:before {
-          content: "";
-					background-image: url("img/ui/comments.svg");
-				}
-			}
-
-			&.read_comments {
-				&:before {
-          content: "";
-					background-image: url("img/ui/comments.svg");
-				}
-			}
-
-			&.write_comments, &.edit {
-				&:before {
-					content: "";
-					background-image: url("img/ui/edit.svg");
+					background-image: url("data:image/svg+xml;utf8,<svg fill='%23374043' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M0 0h24v24H0z' fill='none'/><path d='M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z'/></svg>");
 				}
 			}
 
