--- a/css/elements/_nav-primary.scss
+++ b/css/elements/_nav-primary.scss
@@ -38,25 +38,27 @@ ul#nav-icon__wrapper {
 aside.sidebar {
 	ul.list--blocks {
 		padding: 0;
-
+		font-size: 0;
 		li {
 			display: block;
 			padding: 0;
 			margin: 0;
 			box-shadow: inset 0 -1px $clr_bg-main;
-
-			&:last-child {
-				box-shadow: inset 0 0 $clr_bg-main;
+			@media (min-width: 768px) {
+				display: inline-block;
+				margin: 0.5rem;
+				width: calc(33.33% - 1rem);
 			}
-
+			
 			a {
 				display: block;
 				width: 100%;
 				text-align: left;
 				color: $clr_bg-main;
+				font-size: $font_size-sml;
 				text-decoration: none;
 				padding: $baseline;
-				transition: background-image $ease-main $speed-fast, box-shadow $ease-main $speed-fast;
+				transition: box-shadow $ease-main $speed-fast;
 
 				&:hover {
 					box-shadow: inset 0 -2px $clr_bg-main, 0 1px $clr_bg-main;
