--- a/css/elements/_sidebar.scss
+++ b/css/elements/_sidebar.scss
@@ -1,12 +1,14 @@
 aside.sidebar {
 	position: absolute;
-	top: ($baseline * 3.5);
+	top: 0;
 	right: 0;
-	width: 300px;
+	z-index: 0;
+	width: 100%;
 	height: 100vh;
-	padding: $baseline ($baseline / 2);
-	transform: translate3d(300px, 0, 0);
-	-webkit-transform: translate3d(300px, 0, 0);
+	padding: ($baseline * 3.5) ($baseline / 2) $baseline ($baseline / 2);
+	transform: translate3d(0, -100%, 0);
+	-webkit-transform: translate3d(0, -100%, 0);
+	opacity: 0;
 	transition: $ease-main $speed-fast;
 	background: rgba($clr_black, $opacity-solid);
 	overflow-y: auto;
@@ -16,6 +18,7 @@ aside.sidebar {
 		&[data-state="open"] {
 		transform: translate3d(0, 0, 0);
 		-webkit-transform: translate3d(0, 0, 0);
+		opacity: 1;
 	}
 }
 
