--- a/css/structure/_flag.scss
+++ b/css/structure/_flag.scss
@@ -10,7 +10,7 @@
 	padding: ($baseline / 2);
 	margin: ($baseline / 2) 0;
 	text-transform: uppercase;
-	font-size: $font_size-sml;
+	font-size: $font_size-xsm;
 	&:before {
 		display: block;
 		content: "";
