--- a/css/global/_buttons.scss
+++ b/css/global/_buttons.scss
@@ -27,6 +27,7 @@ button, .button, input[type="submit"] {
 	&.button--big {
 		display: block;
 		margin: $baseline auto 0 auto;
+		width: calc(100% - 2rem);
 		max-width: 320px;
 	}
 }
