--- a/css/typography/_links.scss
+++ b/css/typography/_links.scss
@@ -9,13 +9,15 @@
 		box-shadow: inset 0 -1px 0 $clr_brand;
 		padding-bottom: 1px;
 		transition: box-shadow $ease-main $speed-fast;
-		color: inherit;
+		color: $clr_grey-dark;
 		cursor: pointer !important;
 
 		&:hover {
 			box-shadow: inset 0 -2px 0 $clr_brand, 0 1px 0 $clr_brand;
 		}
 
-		&:visited {}
+		&:visited {
+			color: lighten($clr_grey-dark, 5%);
+		}
 	}
 }
