--- a/css/base/_grid.scss
+++ b/css/base/_grid.scss
@@ -14,7 +14,8 @@ $break: 2;
   display: inline-block;
   vertical-align: top;
 	width: calc(100% - #{$grid-gutter}px);
-	margin: #{($grid-gutter / 2)}px;
+  margin: #{($grid-gutter / 2)}px;
+  flex-grow: 1;
 }
 
 @supports (display: flex) {
