HOUSEKEEPING - eslint added and files cleaned up as per guide

--- a/css/elements/_nav-primary.scss
+++ b/css/elements/_nav-primary.scss
@@ -7,7 +7,8 @@ ul#nav-icon__wrapper {
 	li {
 		margin-right: 0;
 		float: left;
-		button, a {
+		button,
+		a {
 			display: block;
 			background: none;
 			border: none !important;
