--- a/style.css
+++ b/style.css
@@ -885,10 +885,10 @@ header.post__header {
     width: 100%;
     height: 100%;
     padding: 0;
-    background: linear-gradient(transparent, rgba(0, 0, 0, 0.66));
-    background: -webkit-linear-gradient(transparent, rgba(0, 0, 0, 0.66));
-    background: -o-linear-gradient(transparent, rgba(0, 0, 0, 0.66));
-    background: -ms-linear-gradient(transparent, rgba(0, 0, 0, 0.66)); }
+    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.66));
+    background: -webkit-linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.66));
+    background: -o-linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.66));
+    background: -ms-linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.66)); }
   .post__wrapper--image h1 {
     max-width: 800px;
     margin: 0 auto;
@@ -1204,15 +1204,18 @@ article.post-single {
     line-height: 1.8;
     text-align: left; }
     article.post-single .post__content ol, article.post-single .post__author--bio ol,
-    article.post-single .post__content ul, article.post-single .post__author--bio ul {
+    article.post-single .post__content ul,
+    article.post-single .post__author--bio ul {
       padding: 0 0 0 1.3rem;
       margin: 1rem 0 1.3rem; }
       article.post-single .post__content ol li, article.post-single .post__author--bio ol li,
-      article.post-single .post__content ul li, article.post-single .post__author--bio ul li {
+      article.post-single .post__content ul li,
+      article.post-single .post__author--bio ul li {
         line-height: 1.5;
         padding-bottom: 0.5rem; }
         article.post-single .post__content ol li:last-child, article.post-single .post__author--bio ol li:last-child,
-        article.post-single .post__content ul li:last-child, article.post-single .post__author--bio ul li:last-child {
+        article.post-single .post__content ul li:last-child,
+        article.post-single .post__author--bio ul li:last-child {
           padding-bottom: 0; }
     article.post-single .post__content .intro, article.post-single .post__author--bio .intro {
       font-family: "Comfortaa", Arial, "Helvetica Neue", Helvetica, sans-serif !important;
@@ -1225,43 +1228,59 @@ article.post-single {
         font-weight: inherit;
         line-height: inherit; }
     article.post-single .post__content h1, article.post-single .post__author--bio h1,
-    article.post-single .post__content h2, article.post-single .post__author--bio h2,
-    article.post-single .post__content h3, article.post-single .post__author--bio h3,
-    article.post-single .post__content h4, article.post-single .post__author--bio h4,
-    article.post-single .post__content h5, article.post-single .post__author--bio h5,
-    article.post-single .post__content h6, article.post-single .post__author--bio h6 {
+    article.post-single .post__content h2,
+    article.post-single .post__author--bio h2,
+    article.post-single .post__content h3,
+    article.post-single .post__author--bio h3,
+    article.post-single .post__content h4,
+    article.post-single .post__author--bio h4,
+    article.post-single .post__content h5,
+    article.post-single .post__author--bio h5,
+    article.post-single .post__content h6,
+    article.post-single .post__author--bio h6 {
       line-height: 125%;
       margin: 2rem 0 1rem 0; }
     article.post-single .post__content .aligncenter, article.post-single .post__author--bio .aligncenter,
-    article.post-single .post__content .alignleft, article.post-single .post__author--bio .alignleft,
-    article.post-single .post__content .alignnone, article.post-single .post__author--bio .alignnone,
-    article.post-single .post__content .alignright, article.post-single .post__author--bio .alignright {
+    article.post-single .post__content .alignleft,
+    article.post-single .post__author--bio .alignleft,
+    article.post-single .post__content .alignnone,
+    article.post-single .post__author--bio .alignnone,
+    article.post-single .post__content .alignright,
+    article.post-single .post__author--bio .alignright {
       display: block;
       margin-top: 1rem;
       margin-bottom: 1rem;
       vertical-align: text-top; }
-    article.post-single .post__content .alignleft, article.post-single .post__author--bio .alignleft {
+    
+    article.post-single .post__content .alignleft,
+    article.post-single .post__author--bio .alignleft {
       float: left;
       margin-left: 0;
       margin-right: 1rem; }
-    article.post-single .post__content .alignright, article.post-single .post__author--bio .alignright {
+    
+    article.post-single .post__content .alignright,
+    article.post-single .post__author--bio .alignright {
       float: right;
       margin-left: 1rem;
       margin-right: 0; }
     article.post-single .post__content .aligncenter, article.post-single .post__author--bio .aligncenter,
-    article.post-single .post__content .alignnone, article.post-single .post__author--bio .alignnone {
+    article.post-single .post__content .alignnone,
+    article.post-single .post__author--bio .alignnone {
       float: none;
       margin-left: auto;
       margin-right: auto; }
     article.post-single .post__content .wp-caption, article.post-single .post__author--bio .wp-caption,
-    article.post-single .post__content figure, article.post-single .post__author--bio figure,
-    article.post-single .post__content img, article.post-single .post__author--bio img {
+    article.post-single .post__content figure,
+    article.post-single .post__author--bio figure,
+    article.post-single .post__content img,
+    article.post-single .post__author--bio img {
       display: block;
       max-width: 100% !important;
       height: auto !important;
       margin: 0 auto !important; }
     article.post-single .post__content .wp-caption-text, article.post-single .post__author--bio .wp-caption-text,
-    article.post-single .post__content figcaption, article.post-single .post__author--bio figcaption {
+    article.post-single .post__content figcaption,
+    article.post-single .post__author--bio figcaption {
       display: block;
       width: 100%;
       padding: 0.5rem;
@@ -1271,7 +1290,8 @@ article.post-single {
       background-color: #e8e8e8;
       position: relative; }
       article.post-single .post__content .wp-caption-text:before, article.post-single .post__author--bio .wp-caption-text:before,
-      article.post-single .post__content figcaption:before, article.post-single .post__author--bio figcaption:before {
+      article.post-single .post__content figcaption:before,
+      article.post-single .post__author--bio figcaption:before {
         content: "";
         width: 0;
         height: 0;
